<resources>
    <string name="app_name">College-Students-Communication-App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_icon">Email Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_code">Enter Code...</string>
    <string name="join">JOIN</string>
    <string name="phone">Phone</string>
    <string name="hello">Hello.</string>
    <string name="_10_20">10:20</string>
</resources>