<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        >

        <RelativeLayout
            android:id="@+id/email_field"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="20dp">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:src="@drawable/email" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/emailIcon"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/secondaryColor"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_field"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            app:layout_constraintBottom_toTopOf="@id/passwordLoginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_bg">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:src="@drawable/password"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/passwordIcon"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/secondaryColor"
                android:textSize="20sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/passwordLoginButton"
            android:layout_width="115dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            app:layout_constraintBottom_toTopOf="@id/signup_option"
            app:layout_constraintStart_toStartOf="@id/password_field"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:src="@drawable/password"
            android:text="@string/login"
            android:textColor="#FFFFFFFF"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <RelativeLayout
            android:id="@+id/signup_option"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLoginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/question_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/do_not_have_an_account"
                android:layout_marginStart="12dp"
                android:textColor="@color/secondaryColor"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="-18dp"
                android:layout_toEndOf="@id/question_signup"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/sign_up"
                android:textAlignment="textStart"
                android:textColor="#66C047"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>